Serious progress on mobile layout. TO-DO: Mobilise the JourneyMap TO-DO: Fix desktop styling bugs

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -1,1 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Nunito:wght@300;400;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Nunito:wght@300;400;500;600;700;800;900&display=swap");
+body {
+  margin: 0;
+}
